@@ -1,5 +1,6 @@
 package at.ac.fhcampuswien.fhmdb;
 
+import at.ac.fhcampuswien.fhmdb.models.Genres;
 import at.ac.fhcampuswien.fhmdb.models.Movie;
 import at.ac.fhcampuswien.fhmdb.ui.MovieCell;
 import com.jfoenix.controls.JFXButton;
@@ -12,8 +13,7 @@ import javafx.fxml.Initializable;
 import javafx.scene.control.TextField;
 
 import java.net.URL;
-import java.util.List;
-import java.util.ResourceBundle;
+import java.util.*;
 
 public class HomeController implements Initializable {
     @FXML
@@ -33,7 +33,7 @@ public class HomeController implements Initializable {
 
     public List<Movie> allMovies = Movie.initializeMovies();
 
-    public List<String> allGenre = List.of("ACTION", "ADVENTURE", "ANIMATION", "BIOGRAPHY", "COMEDY", "CRIME", "DRAMA", "DOCUMENTARY", "FAMILY", "FANTASY", "HISTORY", "HORROR", "MUSICAL", "MYSTERY", "ROMANCE", "SCIENCE_FICTION", "SPORT", "THRILLER", "WAR", "WESTERN");
+    public List<Genres> allGenre = Arrays.asList(Genres.values());
 
     private final ObservableList<Movie> observableMovies = FXCollections.observableArrayList();   // automatically updates corresponding UI elements when underlying data changes
 
@@ -52,6 +52,11 @@ public class HomeController implements Initializable {
         // TODO add event handlers to buttons and call the regarding methods
         // either set event handlers in the fxml file (onAction) or add them here
 
+        //search button
+        searchBtn.setOnAction(actionEvent -> {
+            // TODO add button functions markrei
+        });
+
         // Sort button example:
         sortBtn.setOnAction(actionEvent -> {
             if(sortBtn.getText().equals("Sort (asc)")) {
@@ -64,5 +69,29 @@ public class HomeController implements Initializable {
         });
 
 
+    }
+
+    public List<Movie> filterByGenre(String genre) {
+        List<Movie> movies = new ArrayList<>();
+
+        for (Movie movie : allMovies){
+            if(movie.getStringGenre().matches(genre)){
+                movies.add(movie);
+            }
+        }
+        return movies;
+    }
+
+    public List<Movie> filterByText(String text) {
+        List<Movie> movies = new ArrayList<>();
+
+        for (Movie movie : allMovies){
+            if(movie.getTitle().matches(text)){
+                movies.add(movie);
+            } else if (movie.getDescription().matches(text)){
+                movies.add(movie);
+            }
+        }
+        return movies;
     }
 }
